fix: remove extra whitespace + better adjust vertical alignment of Icon within the Headline component; update PL demo to include demoing icons at different Headline sizes

--- a/packages/components/bolt-headline/src/_tools.headlines.scss
+++ b/packages/components/bolt-headline/src/_tools.headlines.scss
@@ -22,36 +22,25 @@
   &:last-child {
     @include bolt-margin-bottom(0);
   }
-
-  // Headline + Icon and/or Icon + Headline Spacing
-  &--icon-position-before,
-  &--icon-position-left {
-    .c-bolt-headline__icon {
-      @include bolt-margin-right(xxsmall);
-    }
-  }
-  &--icon-position-after,
-  &--icon-position-right {
-    .c-bolt-headline__icon {
-      @include bolt-margin-left(xxsmall);
-    }
-  }
 }
 
 .c-bolt-headline__icon {
   display: inline-flex;
   justify-content: center;
   align-items: center; // different alignment than if align-items is set to center
-  min-height: 1.3em;
-  vertical-align: text-bottom;
+  position: relative;
 
-  &--icon-position-before,
-  &--icon-position-left {
-    @include bolt-margin-right(xxsmall);
+  // adjust vertical alignment of icons, given the unknown line-height / font-size
+  // @todo: re-evaluate this workaround once we're outputting the CSS custom prop values of current font size + line height being used
+  top: 0.2ex;
+
+  &--position-before,
+  &--position-left {
+    @include bolt-margin-right(xsmall);
   }
-  &--icon-position-after,
-  &--icon-position-right {
-    @include bolt-margin-left(xxsmall);
+  &--position-after,
+  &--position-right {
+    @include bolt-margin-left(xsmall);
   }
 }
 
